# llm-endpoint

./: .gitignore  Dockerfile  Dockerfile_cloud_build  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
algo/: bert.py
api/: main.py
app/: main.py
tests/algo/: bert.py
